--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-indicators": "^0.13.0",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-modal": "^6.0.0",
     "react-native-modal-overlay": "^1.2.3",
     "react-native-track-player": "^0.2.4",
