--- a/ios/bibimpop/Info.plist
+++ b/ios/bibimpop/Info.plist
@@ -56,7 +56,7 @@
 		<string>Proxima-Nova-Bold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchImage</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
