--- a/ios/bibimpop/Info.plist
+++ b/ios/bibimpop/Info.plist
@@ -8,6 +8,10 @@
 	<string>bibimpop</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIcons</key>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>org.reactjs.native.example.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -56,7 +60,7 @@
 		<string>Proxima-Nova-Bold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchImage</string>
+	<string>Images-3</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
